# feature_embedding

./: .gitignore  README.md  pyproject.toml  train.py
examples/: train.py
src/embedding/: dataset.py  model.py
