[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
    { name = "NAKASONE Hiroshi" }
]
name = "embedding"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
]

[project.optional-dependencies]
example = [
  "matplotlib",
  "tqdm",
]
