[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
    { name = "NAKASONE Hiroshi" }
]
name = "embedding"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "ruff",
    "tqdm",
]
example = [
    "matplotlib",
    "tqdm",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
]
target-version = "py39"

[tool.ruff.lint]
select = [
    "I",
]
